--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <main>
         <section id="login">
-            <div id="imagem"></div>
+            <div id="imagem">
+                
+            </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e poder fazer as configurações no seu ambiente.</p>
